updated about, readme, unminified version with source maps by default

--- a/public/options.html
+++ b/public/options.html
@@ -191,7 +191,11 @@
 	<h1 data-i18n="page_options_about">About</h1>
 
 	<div class="options-block">
-		<h3 id="version">v1.0.0</h3>
+		<h3 id="version">v1.0.1</h3>
+		<div><b>Author:</b> ilih (Ilia Novikov)</div>
+		<div>&nbsp;</div>
+		<div>Inspired by The Great Suspender extension.</div>
+		<div>&nbsp;</div>
 		<div id="url">GitHub: <a href="https://github.com/ilihh/Suspender-MV3" target="_blank">github.com/ilihh/Suspender-MV3</a></div>
 	</div>
 </div>
