--- a/public/popup.html
+++ b/public/popup.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
-	<link id="favicon-url" rel="icon" href="img/32dark.png" />
+	<link id="favicon-url" rel="icon" href="img/32.png" />
 	<link rel="stylesheet" type="text/css" href="style.css">
 
 	<title data-i18n="manifest_name"></title>
