--- a/public/suspended.html
+++ b/public/suspended.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
-	<link id="favicon-url" rel="icon" href="img/32dark.png" />
+	<link id="favicon-url" rel="icon" href="img/32.png" />
 	<link rel="stylesheet" type="text/css" href="style.css">
 
 	<title data-i18n="manifest_name"></title>
@@ -13,7 +13,7 @@
 
 <div id="suspended">
 	<div id="page-info">
-		<img id="favicon" alt="" src="img/32dark.png"/>
+		<img id="favicon" alt="" src="img/32.png"/>
 		<span id="title"></span>
 	</div>
 
@@ -22,7 +22,7 @@
 	</div>
 
 	<div id="logo">
-		<img src="img/_logo.svg" alt=""/>
+		<img src="img/suspended.svg" alt=""/>
 	</div>
 
 	<div id="unsuspend-text" data-i18n="page_suspended_unsuspend"></div>
