--- a/public/options.html
+++ b/public/options.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
-	<link id="favicon-url" rel="icon" href="img/32dark.png" />
+	<link id="favicon-url" rel="icon" href="img/32.png" />
 	<link rel="stylesheet" type="text/css" href="style.css">
 
 	<title data-i18n="page_options_title">Suspender MV3: Settings</title>
@@ -26,24 +26,24 @@
 
 		<label for="suspendDelay">
 			<span data-i18n="page_options_suspend_delay">Automatically suspend tabs after</span>
-			<select id="suspendDelay">
-				<option value="0" data-i18n="page_options_suspend_delay_never">Never</option>
-				<option value="5" data-i18n="page_options_suspend_delay_5_min">5 minutes</option>
-				<option value="10" data-i18n="page_options_suspend_delay_10_min">10 minutes</option>
-				<option value="15" data-i18n="page_options_suspend_delay_15_min">15 minutes</option>
-				<option value="30" data-i18n="page_options_suspend_delay_30_min">30 minutes</option>
-				<option value="60" data-i18n="page_options_suspend_delay_1_hour">1 hour</option>
-				<option value="120" data-i18n="page_options_suspend_delay_2_hours">2 hours</option>
-				<option value="240" data-i18n="page_options_suspend_delay_4_hours">4 hours</option>
-				<option value="360" data-i18n="page_options_suspend_delay_6_hours">6 hours</option>
-				<option value="720" data-i18n="page_options_suspend_delay_12_hours">12 hours</option>
-				<option value="1440" data-i18n="page_options_suspend_delay_1_day">1 day</option>
-				<option value="2880" data-i18n="page_options_suspend_delay_2_days">2 days</option>
-				<option value="4320" data-i18n="page_options_suspend_delay_3_days">3 days</option>
-				<option value="10080" data-i18n="page_options_suspend_delay_1_week">1 week</option>
-				<option value="20160" data-i18n="page_options_suspend_delay_2_week">2 weeks</option>
-			</select>
 		</label>
+		<select id="suspendDelay">
+			<option value="0" data-i18n="page_options_suspend_delay_never">Never</option>
+			<option value="5" data-i18n="page_options_suspend_delay_5_min">5 minutes</option>
+			<option value="10" data-i18n="page_options_suspend_delay_10_min">10 minutes</option>
+			<option value="15" data-i18n="page_options_suspend_delay_15_min">15 minutes</option>
+			<option value="30" data-i18n="page_options_suspend_delay_30_min">30 minutes</option>
+			<option value="60" data-i18n="page_options_suspend_delay_1_hour">1 hour</option>
+			<option value="120" data-i18n="page_options_suspend_delay_2_hours">2 hours</option>
+			<option value="240" data-i18n="page_options_suspend_delay_4_hours">4 hours</option>
+			<option value="360" data-i18n="page_options_suspend_delay_6_hours">6 hours</option>
+			<option value="720" data-i18n="page_options_suspend_delay_12_hours">12 hours</option>
+			<option value="1440" data-i18n="page_options_suspend_delay_1_day">1 day</option>
+			<option value="2880" data-i18n="page_options_suspend_delay_2_days">2 days</option>
+			<option value="4320" data-i18n="page_options_suspend_delay_3_days">3 days</option>
+			<option value="10080" data-i18n="page_options_suspend_delay_1_week">1 week</option>
+			<option value="20160" data-i18n="page_options_suspend_delay_2_week">2 weeks</option>
+		</select>
 
 		<label>
 			<input type="checkbox" id="suspendPinned" /> <span data-i18n="page_options_suspend_pinned">Suspend pinned tabs</span>
