--- a/public/options.html
+++ b/public/options.html
@@ -220,6 +220,10 @@
 	</div>
 
 	<div id="migrate-progress" class="options-block hidden">
+		<div class="text"></div>
+		<svg class="spinner" width="50" height="50" viewBox="0 0 50 50" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
+			<circle class="path" cx="25" cy="25" r="20" fill="none" stroke-width="5"/>
+		</svg>
 	</div>
 
 	<div id="migrate-done" class="options-block hidden" data-i18n="page_options_migrate_done">
