--- a/public/popup.html
+++ b/public/popup.html
@@ -50,5 +50,11 @@
 	<div class="action"><span data-action="open_settings"></span></div>
 </div>
 
+<div class="action-progress hidden">
+	<svg class="spinner" width="50" height="50" viewBox="0 0 50 50" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
+		<circle class="path" cx="25" cy="25" r="20" fill="none" stroke-width="3"/>
+	</svg>
+</div>
+
 </body>
 </html>
