--- a/public/suspended.html
+++ b/public/suspended.html
@@ -28,7 +28,7 @@
 	<div id="unsuspend-text" data-i18n="page_suspended_unsuspend"></div>
 
 	<div id="shortcuts-info">
-		<a href="./options.html#shortcuts" target="_blank" id="shortcuts" class="hidden" data-i18n="page_suspended_shortcuts"></a>
+		<a href="#" target="_blank" id="shortcuts" data-i18n="page_suspended_shortcuts"></a>
 	</div>
 </div>
 
