--- a/public/options.html
+++ b/public/options.html
@@ -234,10 +234,10 @@
 	<h1 data-i18n="page_options_about">About</h1>
 
 	<div class="options-block">
-		<h3 id="version">v1.0.8</h3>
-		<div><b>Author:</b> ilih (Ilia Novikov)</div>
+		<h3 id="version">Suspender MV3 v1.0.8</h3>
+		<div><b data-i18n="page_options_about_author">Author:</b> ilih (Ilia Novikov)</div>
 		<div>&nbsp;</div>
-		<div>Inspired by The Great Suspender extension.</div>
+		<div data-i18n="page_options_about_info">Inspired by The Great Suspender extension.</div>
 		<div>&nbsp;</div>
 		<div id="url">GitHub: <a href="https://github.com/ilihh/Suspender-MV3" target="_blank">github.com/ilihh/Suspender-MV3</a></div>
 	</div>
