--- a/public/options.html
+++ b/public/options.html
@@ -135,6 +135,21 @@
 		<label class="hidden">
 			<input type="checkbox" data-field="syncProfile" /> <span data-i18n="page_options_sync_profile">Sync settings with your Chrome profile</span>
 		</label>
+
+		<h3 data-i18n="page_options_block_theme">Theme</h3>
+		<div class="radio-group">
+			<label>
+				<input type="radio" name="theme" value="auto" /> <span data-i18n="page_options_theme_auto">Auto</span>
+			</label>
+
+			<label>
+				<input type="radio" name="theme" value="light" /> <span data-i18n="page_options_theme_light">Light</span>
+			</label>
+
+			<label>
+				<input type="radio" name="theme" value="dark" /> <span data-i18n="page_options_theme_dark">Dark</span>
+			</label>
+		</div>
 	</div>
 </div>
 
