--- a/public/suspended.html
+++ b/public/suspended.html
@@ -20,9 +20,24 @@
 	<div id="page-url">
 		<a id="url"></a>
 	</div>
-
 	<div id="logo">
-		<img src="img/suspended.svg" alt=""/>
+		<svg width="200" height="190" viewBox="0 0 200 190" xmlns="http://www.w3.org/2000/svg">
+			<rect class="logo-background" x="0" y="30" width="200" height="160" rx="10" ry="10" />
+
+			<rect class="logo-header" x="0" y="30" width="200" height="24" rx="10" ry="10" />
+			<rect class="logo-header" x="0" y="44" width="200" height="10" rx="0" ry="0" />
+			<circle class="logo-dot" cx="15" cy="42" r="5" />
+			<circle class="logo-dot" cx="30" cy="42" r="5" />
+			<circle class="logo-dot" cx="45" cy="42" r="5" />
+
+			<rect class="logo-bar" x="10" y="65" width="140" height="10" rx="3" ry="3" />
+			<rect class="logo-bar" x="10" y="85" width="100" height="10" rx="3" ry="3" />
+			<rect class="logo-bar" x="10" y="105" width="120" height="10" rx="3" ry="3" />
+
+			<text class="logo-symbol size-1" x="150" y="25">Z</text>
+			<text class="logo-symbol size-2" x="170" y="16">Z</text>
+			<text class="logo-symbol size-3" x="185" y="9">Z</text>
+		</svg>
 	</div>
 
 	<div id="unsuspend-text" data-i18n="page_suspended_unsuspend"></div>
