--- a/public/options.html
+++ b/public/options.html
@@ -127,11 +127,6 @@
 		</label>
 		<div class="comment" data-i18n="page_options_cleanup_history_permissions"></div>
 
-		<label>
-			<input type="checkbox" data-field="exportSessions" /> <span data-i18n="page_options_export_sessions">Enable sessions export</span>
-		</label>
-		<div class="comment" data-i18n="page_options_export_sessions_permissions"></div>
-
 		<label class="hidden">
 			<input type="checkbox" data-field="syncProfile" /> <span data-i18n="page_options_sync_profile">Sync settings with your Chrome profile</span>
 		</label>
@@ -178,7 +173,7 @@
 				<a href="#" class="session-name"></a>
 				<button type="button" data-open-suspended class="session-action" data-i18n="page_options_sessions_open_suspended">open suspended</button>
 				<button type="button" data-open-loaded class="session-action" data-i18n="page_options_sessions_open_loaded">open loaded</button>
-				<button type="button" data-export class="session-action" data-i18n="page_options_sessions_export">export</button>
+				<a type="button" data-export class="button session-action" data-i18n="page_options_sessions_export">export</a>
 				<button type="button" data-save class="session-action" data-i18n="page_options_sessions_save">save</button>
 				<button type="button" data-rename class="session-action" data-i18n="page_options_sessions_rename">rename</button>
 				<button type="button" data-delete class="session-action" data-i18n="page_options_sessions_delete">delete</button>
