--- a/public/options.html
+++ b/public/options.html
@@ -158,7 +158,7 @@
 	<template id="window-template">
 		<div class="window">
 			<div class="window-name">
-				<span data-name data-i18n="page_options_sessions_window"></span>
+				<span data-name></span>
 				<button type="button" data-open-suspended class="window-action" data-i18n="page_options_sessions_open_suspended">open suspended</button>
 				<button type="button" data-open-loaded class="window-action" data-i18n="page_options_sessions_open_loaded">open loaded</button>
 			</div>
@@ -171,6 +171,8 @@
 			<div class="session-header">
 				<button class="toggle-session">+/-</button>
 				<a href="#" class="session-name"></a>
+			</div>
+			<div class="session-header">
 				<button type="button" data-open-suspended class="session-action" data-i18n="page_options_sessions_open_suspended">open suspended</button>
 				<button type="button" data-open-loaded class="session-action" data-i18n="page_options_sessions_open_loaded">open loaded</button>
 				<a type="button" data-export class="button session-action" data-i18n="page_options_sessions_export">export</a>
