--- a/public/options.html
+++ b/public/options.html
@@ -251,6 +251,8 @@
 		<div>&nbsp;</div>
 		<div data-i18n="page_options_about_info">Inspired by The Great Suspender extension.</div>
 		<div>&nbsp;</div>
+		<div><a href="https://github.com/ilihh/Suspender-MV3/blob/main/changelog.md" data-i18n="page_options_about_changelog" target="_blank">Changelog</a></div>
+		<div>&nbsp;</div>
 		<div id="url">GitHub: <a href="https://github.com/ilihh/Suspender-MV3" target="_blank">github.com/ilihh/Suspender-MV3</a></div>
 	</div>
 </div>
